added early stoppingadded early stopping

--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -695,7 +695,7 @@
     "\n",
     "# Parameters\n",
     "LEARNING_RATE = 0.001\n",
-    "EPOCHS = 25\n",
+    "EPOCHS = 250\n",
     "BATCH_SIZE = 128\n",
     "mu = 0\n",
     "sigma = 0.1\n",
@@ -975,6 +975,8 @@
     "    \n",
     "    num_examples = len(X_train)\n",
     "    learning_info = []\n",
+    "    best_loss = 1000\n",
+    "    iterations_not_improved = 0\n",
     "    \n",
     "    print(\"Training...\")\n",
     "    print()\n",
@@ -1003,10 +1005,26 @@
     "            print(\"EPOCH   Training Accuracy   Training Loss      Val. Accuracy       Val. Loss\")\n",
     "        print(\"{:3d}     {:.6f}            {:.6f}           {:.6f}            {:.6f}       \".format(i+1, training_accuracy, training_loss, validation_accuracy, validation_loss), end=\"\")\n",
     "        print()\n",
+    "        \n",
+    "        if validation_loss - best_loss < -1e-6:\n",
+    "            best_loss = validation_loss\n",
+    "            iterations_not_improved = 0\n",
+    "            if validation_loss < 0.25:\n",
+    "                print(\"Model saved\",end=\"\")\n",
+    "                saver.save(sess, save_model_in_path)\n",
+    "                did_save = True\n",
+    "        else:\n",
+    "            iterations_not_improved += 1\n",
+    "            \n",
+    "        if iterations_not_improved > 5:\n",
+    "            print(\"Validation loss is no longer improving, do early stopping\")\n",
+    "            break\n",
     "\n",
+    "    \n",
+    "    if did_save == False:\n",
+    "        print(\"Model saved\")\n",
+    "        saver.save(sess, save_model_in_path)\n",
     "   \n",
-    "    saver.save(sess, save_model_in_path)\n",
-    "    print(\"Model saved\")\n",
     "    plot_learning_curves(learning_history)"
    ]
   },
