really final touches

--- a/Traffic_Signs_Recognition.ipynb
+++ b/Traffic_Signs_Recognition.ipynb
@@ -639,7 +639,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "[image1]: cnn_architecture.png \"architecture\"\n",
+    "[image1]: cnn_architecture1.png \"architecture\"\n",
     " I started out with LeNet as initial design to set up the notebook and the whole pipeline. Because the performance was not as good as I had hoped, I moved on and developed an architecture inspired by the one described in [[1]](http://yann.lecun.com/exdb/publis/pdf/sermanet-ijcnn-11.pdf). Also using the multi-scale approach but using larger fully connected layers with dropout for training. With this approach, I obtained satisfactory results.\n",
     "\n",
     " My final model is a convolutional neural network with three convolutional and three fully connected layers. The purpose of the first convolutional layer is to enable the network to find the optimal color space and hence has a filter size of 1x1 and a depth of 3. After the first convolutional layer,  two convolutional layers, each followed by a 2x2 maxpool layer, are used. The convolutional layers both have a filter size of 5x5 and a depth of 32 and 64, respectively.\n",
@@ -1503,9 +1503,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:carnd-term1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-carnd-term1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1518,6 +1518,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
